# althea

./: .gitignore  Makefile  README.md  basiclangchain.ipynb  mongdbloader.py  pyproject.toml  rxconfig.py  test_write_access.txt
.config/: .env.template  .pre-commit.yaml
.web/: .gitignore  env.json  jsconfig.json  package.json  reflex.install_frontend_packages.cached  reflex.json  tailwind.config.js
.web/components/reflex/: chakra_color_mode_provider.js  radix_themes_color_mode_provider.js
.web/pages/: 404.js  _app.js  index.js
.web/utils/: client_side_routing.js  components.js  context.js  theme.js
.web/utils/helpers/: range.js
althea/: __init__.py  althea.py  network.py  secrets.py  state.py  styles.py  unpaywall.py  utils.py
althea/components/: __init__.py  chat.py  graph_visual.py  modal.py  navbar.py  sidebar.py
althea/dataset/txt/: 10_1002_anie_201206749.txt
althea/nlp/: __init__.py  base.py  chat.py  client.py  dataset_loader.py  embed.py  embeded&client.py  hallu.py  models.py  peer_review.py  query.py  researcher.py  search.py  text_input.py  wiki.py
althea/openalex/: __init__.py  errors.py  models.py  search.py  utils.py  work.py
althea/store/: __init__.py  mongo.py  vector.py
data/: network.json  no_oa.txt  works.json
llmfunctions_/: 10_1002_cpbi_3.txt  10_1002_cphy_c160006.txt  10_1002_jcc_20082.txt  Multipaper_embed.py  data_embed.py  dataset_loader.py  query.py
scripts/: build_network.py  download_papers.py  embed_papers.py  map_work_id_doi.py  paper_stats.py
