[tool.poetry]
name = "althea"
version = "0.1.0"
description = ""
authors = ["Punit Arani <punitsai36@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiolimiter = "^1.1.0"
pydantic = "<2.0.0"
pymongo = "^4.6.1"
python-dotenv = "^1.0.1"
reflex = "^0.4.0"
tenacity = "^8.2.3"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
pre-commit = "^3.6.1"
pylint = "^3.0.3"
pytest = "^8.0.1"
pytest-asyncio = "^0.23.5"
ruff = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
